# back-app

./: .env.example  .gitignore  API_DOCUMENTATION.md  Cargo.toml  swagger-ui.html
.github/workflows/: ci.yml
scripts/: run_api_tests.example.ps1
src/: db.rs  main.rs  utils.rs
src/dtos/: auth.rs  category.rs  chatbot.rs  mod.rs  order.rs  pagination.rs  product.rs  user.rs
src/dtos/auth/: login.rs  mod.rs  register.rs  update_role.rs
src/handlers/: auth_handlers.rs  category_handlers.rs  mod.rs  order_handlers.rs  product_handlers.rs  user_handlers.rs
src/handlers/Auth/: google.rs  login.rs  logout.rs  mod.rs  refresh.rs  register.rs  update_role.rs
src/handlers/auth/: google.rs  login.rs  logout.rs  refresh.rs  register.rs  update_role.rs
src/handlers/category/: create.rs  delete.rs  get_all.rs  get_by_id.rs  mod.rs  update.rs
src/handlers/chatbot/: mod.rs  recommend.rs
src/handlers/order/: checkout.rs  mod.rs  process_payment.rs  query_midtrans.rs  status_db.rs  webhook.rs
src/handlers/product/: create.rs  delete.rs  get_all.rs  get_by_id.rs  mod.rs  update.rs
src/handlers/user/: profile.rs
src/middleware/: auth.rs
src/models/: category.rs  mod.rs  order.rs  product.rs  user.rs
src/routes/: auth_routes.rs  category_routes.rs  chatbot_routes.rs  mod.rs  order_routes.rs  product_routes.rs  user_routes.rs
src/utils/: api_response.rs  jwt.rs  midtrans.rs  mod.rs
