[package]
name = "back-app"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros", "query", "json"] }
tokio = { version = "1.43", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "macros"] }
dotenvy = "0.15"
tower-http = { version = "0.4", features = ["cors"] }
anyhow = "1.0"
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.15"
jsonwebtoken = "8"
axum-extra = { version = "0.10", features = ["cookie"] }
chrono = "0.4"
time = "0.3"
url = "2"
oauth2 = "4"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }


[profile.dev]
opt-level = 0
